<resources>
    <string name="app_name">AllInApp</string>
    <string name="TextLogin">¡Hola!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Inicio</string>
    <string name="title_reports">Reportes</string>
    <string name="title_pdv">PDV</string>
    <string name="title_routes">Rutas</string>
    <string name="title_informs">Informes</string>
    <string name="title_calendar">Calendario</string>
    <string name="title_others">Otros</string>

    <string name="end_sync">Sincronizacion exitosa</string>
    <string name="ok_save_report">Se ha guardado con exito el reporte</string>
    <string name="error_login">Usuario y/o Contrasena incorrecta</string>
    <string name="ok_login">Login correcto</string>
    <string name="error_network">Error de red</string>
    <string name="error_network_ok">La informacion se guardo correctamente, pero no se subio a internet</string>
    <string name="error_unknown">Ha ocurrido un error</string>
    <string name="text_check_in">Marcar Ingreso</string>
    <string name="text_check_out">Marcar salida</string>
    <string name="bt_accept">Entiendo</string>
    <string name="current_day">%1$s, %2$s %3$s %4$s</string>
    <string name="register_button">Registrar</string>
    <string name="check_out_pdv">Check Out PDV</string>
    <string name="enter">Ingresar</string>
    <string name="select_company">Selecciona la empresa</string>
    <string name="trade_marketing">Trade Marketing</string>
    <string name="notify_already">Ya realizaste check-in en el punto de venta</string>
    <string name="notify_sended">Información registrada y enviada con éxito</string>
    <string name="notify_sended_error">Información registrada y no enviada</string>
    <string name="notify_update">Actualización exitosa</string>
    <string name="notify_update_location">Se actualizó la ubicación</string>
    <string name="register_ready">Ya se registró</string>
    <string name="notify_error_register">No se pudo registrar, debe completar las preguntas obligatorias</string>
    <string name="ok">OK</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="report">Reporte</string>
    <string name="code">Código</string>
    <string name="take_picture">Tomar Foto</string>
    <string name="take_picture_before">Tomar Foto Antes</string>
    <string name="take_picture_after">Tomar Foto Después</string>
    <string name="comments">Comentario</string>
    <string name="add_comment">Ingrese comentario</string>
    <string name="select_audio">Selecciona Audio</string>
    <string name="record">Grabar</string>
    <string name="record_audio">Grabar un audio</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="send_password">Enviar contraseña</string>
    <string name="eraser">Borrador</string>
    <string name="record_one">Grabacion 1</string>
    <string name="error_photo_limit">Solo se puede agregar cinco fotografías</string>
    <string name="time_audio_limit">(Máximo 7 minutos)</string>
    <string name="error_audio_limit">Solo puedes grabar 7 minutos como máximo</string>
    <string name="no_audios">Se debe enviar por lo menos un audio</string>
    <string name="successful_update_audio">El audio se ha actualizado correctamente</string>
    <string name="checkoout_successful">Registro exitoso</string>
    <string name="success_sync_audio">El audio se ha enviado correctamente</string>
    <string name="error_get_file">Ha ocurrido un error al obtener el audio</string>
    <string name="reporte_de_geolocalizaci_n">Reporte de geolocalización</string>
    <string name="warningReportGeolocation">Tiene que seleccionar una fecha y al menos un usuario</string>
    <string name="only_one_audio_per_question">Solo se puede grabar un audio por pregunta. Borre un audio para poder grabar otro</string>
    <string name="no_data_tracking">No hay datos en esta fecha para los usuarios selecionados</string>
    <string name="select_dates">"Se debe seleccionar fecha de inicio y final "</string>
    <string name="already_added">Este usuario ya se ha agregado</string>
    <string name="qb_error_connection">Error de conexión con QuickBlox</string>
    <string name="qb_reconnection">Reconectando con QuibckBlox</string>
    <string name="no_issue">Se tiene que agregar un asunto</string>
</resources>
