<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.reports.picture.PictureFragment">

    <include
        android:id="@+id/iHeader"
        layout="@layout/header_report"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iHeader">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLabelCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="36dp"
                    android:text="@string/code"
                    android:textColor="@color/text_dark"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="36dp"
                    android:background="@drawable/bg_gray"
                    android:padding="12dp"
                    android:textColor="@color/text_dark"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelCode" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLabelPV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="36dp"
                    android:text="Punto de Venta"
                    android:textColor="@color/text_dark"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCode" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btTakePhotoBefore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_blue_button_reports"
                    android:drawableStart="@drawable/ic_report_photo"
                    android:drawablePadding="12dp"
                    android:paddingStart="36dp"
                    android:paddingEnd="36dp"
                    android:text="@string/take_picture_before"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelPV" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPhotoBefore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btTakePhotoBefore"
                    tools:itemCount="5" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btTakePhotoAfter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_blue_button_reports"
                    android:drawableStart="@drawable/ic_report_photo"
                    android:drawablePadding="12dp"
                    android:paddingStart="36dp"
                    android:paddingEnd="36dp"
                    android:text="@string/take_picture_after"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rvPhotoBefore" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPhotoAfter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btTakePhotoAfter"
                    tools:itemCount="5" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLabelComments"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="36dp"
                    android:text="@string/comments"
                    android:textColor="@color/text_dark"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rvPhotoAfter" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/conteLayout"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="36dp"
                    android:background="@drawable/selector"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelComments">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@null"
                        android:hint="@string/add_comment" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_blue_button_reports"
                    android:gravity="center"
                    android:text="Grabar"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/conteLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>