<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.tawa.allinapp.features.reports.audio.AudioViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.reports.picture.PictureFragment">

        <include
            android:id="@+id/iHeader"
            layout="@layout/header_report"
            app:title="@{`Reporte de Audios`}"
            app:sub="@{`Informe:`}"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iHeader">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLabelSelectAudio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="36dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="36dp"
                        android:text="@string/select_audio"
                        android:textColor="@color/text_dark"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btTakeAudioSelect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_blue_button_reports"
                        android:drawableStart="@drawable/ic_record"
                        android:layout_marginTop="16dp"
                        android:drawablePadding="12dp"
                        android:paddingStart="36dp"
                        android:paddingEnd="36dp"
                        android:text="@string/select_audio"
                        android:onClick="@{()->viewModel.doSelectAudio()}"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvLabelSelectAudio" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvAudioSelect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btTakeAudioSelect"
                        tools:itemCount="5" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLabelRecordAudio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="36dp"
                        android:layout_marginEnd="36dp"
                        android:text="@string/record_audio"
                        android:textColor="@color/text_dark"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rvAudioSelect" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btTakeAudioRecord"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_blue_button_reports"
                        android:drawableStart="@drawable/ic_record"
                        android:layout_marginTop="16dp"
                        android:drawablePadding="12dp"
                        android:paddingStart="36dp"
                        android:paddingEnd="36dp"
                        android:text="@string/record"
                        android:onClick="@{()->viewModel.doRecordAudio()}"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelRecordAudio" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/rvAudioRecord"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btTakeAudioRecord">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:src="@drawable/ic_clip"
                            android:layout_width="wrap_content"
                            android:onClick="@{()->viewModel.doSelectAudio()}"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvRecord"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_gravity="center"
                            android:text="@={viewModel.file}"
                            android:onClick="@{()->viewModel.doSelectAudio()}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatImageView
                            android:src="@drawable/ic_close"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btSavePictures"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/bg_blue_button_reports"
                        android:gravity="center"
                        android:text="@string/register_button"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rvAudioRecord" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>